# stockfish_flutter_plus

./: README.md  pubspec.yaml
android/: CMakeLists.txt
example/: pubspec.yaml
example/integration_test/: app_test.dart
example/lib/: main.dart
